# agent-world-compiler-poc

./: CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
compiler/: __init__.py  compile_manifest.py  profiler.py
demo/: __init__.py  run.py
docs/: architecture.md
docs/summit/cfp/: abstract.md
docs/summit/talk/: conference_speech.md  script-notes.md
examples/: README.md  demo_pipeline.py  derive_and_compile.py  evaluate_example.py  record_and_compile.py
fixtures/: README.md
fixtures/manifests/: repo-safe-write.yaml
fixtures/traces/: benign_repo_maintenance.json  unsafe_exfiltration.json
manifests/: repo-safe-write.yaml
notebooks/: pipeline_walkthrough.ipynb
policy/: __init__.py  evaluate.py
profiles/: repo_safe_write.yaml
src/awc/: __init__.py
src/awc/compiler/: __init__.py  compile_manifest.py  profiler.py  render_tools.py
src/awc/observe/: __init__.py  recorder.py
src/awc/policy/: __init__.py  engine.py  evaluate.py  taint.py
summit/: README.md
summit/cfp/: abstract.md
tests/: __init__.py  conftest.py  test_compiler.py  test_engine.py  test_integration.py  test_recorder.py  test_render_tools.py  test_taint.py
